--- a/WebContent/astro.html
+++ b/WebContent/astro.html
@@ -40,64 +40,67 @@
 <title>Astro Web</title>
 </head>
 <body>
-	<div class="p-3 mb-2 bg-danger text-orange">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h1>Astro Web</h1>
+
+	<div class="container-fluid">
+		<div class="fundo">
+			<div class="corpo-Astro">
+				<div class="panel panel-default" id="cabecalho">
+					<div class="panel-heading">
+						<h1>Astro Web</h1>
+					</div>
+				</div>
+
+
+				<div class="row content" id="conteudo">
+					<div class="col-md-3 "></div>
+					<div class="col-md-6 ">
+						<form id="form" data-toggle="validator" role="form" method="get"
+							action="AstroController">
+							<div class="AstroForm">
+								Preencha seu nome e sua idade:
+
+								<div class="form-group">
+									<label for="nome" class="control-label">Nome: </label> <input
+										id="nome" class="form-control"
+										placeholder="Digite a nome aqui..." type="text" name="nome">
+								</div>
+
+								<div class="form-group">
+									<label for="idade" class="control-label">Idade: </label> <input
+										type="text" class="form-control" id="idade" name="idade"
+										placeholder="Digite sua idade aqui ...">
+								</div>
+							</div>
+							</br>
+							<div class="horoscopo">
+								</br> Gostaria de saber seu horoscopo chinês baseado em sua idade?
+
+								<div class="row">
+									<div class="col-md-5 "></div>	
+									<div class="btn-group-toggle" data-toggle="buttons">
+										<label class="btn btn-warning btn-lg "> <input
+											type="checkbox" id="sim" id="verHoroscopo"
+											name="verHoroscopo" value="sim"> SIM
+										</label>
+									</div>
+									<!-- <div class="col-md-2 "></div> -->
+									<!-- <div class="btn-group-toggle" data-toggle="buttons">
+									<label class="btn btn-warning btn-lg"> <input
+										type="checkbox" id="sim" id="verHoroscopo" name="verHoroscopo"
+										value="nao"> NÃO
+									</label>
+								</div> -->
+									<div class="col-md-2 "></div>
+									</br> </br>
+								</div>
+							</div>
+							<button type="submit" class="btn btn-warning btn-lg btn-block">Enviar</button>
+						</form>
+					</div>
+					<div class="col-md-3 "></div>
+				</div>
 			</div>
 		</div>
-
-		<div class="row content" id="conteudo">
-			<div class="col-md-3 "></div>
-			<div class="col-md-6 ">
-				<form id="form" data-toggle="validator" role="form" method="get"
-					action="AstroController">
-					<fieldset>
-						<legend>Preencha seu nome e sua idade: </legend>
-
-						<div class="form-group">
-							<label for="nome" class="control-label">Nome: </label> <input
-								id="nome" class="form-control"
-								placeholder="Digite a nome aqui..." type="text" name="nome">
-						</div>
-
-						<div class="form-group">
-							<label for="idade" class="control-label">Idade: </label> <input
-								type="text" class="form-control" id="idade" name="idade"
-								placeholder="Digite sua idade aqui ...">
-						</div>
-					</fieldset>
-					</br>
-					<fieldset>
-						<legend>Gostaria de saber seu horoscopo chinês baseado em
-							sua idade?</legend>
-						<div class="row">
-							<div class="col-md-3 "></div>
-							<div class="btn-group-toggle" data-toggle="buttons">
-								<label class="btn btn-warning btn-lg"> <input
-									type="checkbox" id="sim" id="verHoroscopo" name="verHoroscopo"
-									value="sim" > SIM
-								</label>
-							</div>
-							<div class="col-md-2 "></div>
-							<div class="btn-group-toggle" data-toggle="buttons">
-								<label class="btn btn-warning btn-lg"> <input
-									type="checkbox" id="sim" id="verHoroscopo" name="verHoroscopo"
-									value="nao" > NÃO
-								</label>
-							</div>
-							<div class="col-md-3 "></div>
-						</div>
-					</fieldset>
-					<button type="submit" class="btn btn-warning btn-lg">Enviar</button>
-				</form>
-			</div>
-			<div class="col-md-3 "></div>
-		</div>
-
-		</form>
-	</div>
-	</div>
 	</div>
 </body>
 </html>
