--- a/WebContent/astro.html
+++ b/WebContent/astro.html
@@ -43,15 +43,15 @@
 
 	<div class="container-fluid">
 		<div class="fundo">
-			<div class="corpo-Astro">
+			<div class="corpo-Astro-home">
 				<div class="panel panel-default" id="cabecalho">
 					<div class="panel-heading">
 						<h1>Astro Web</h1>
 					</div>
 				</div>
 
-
 				<div class="row content" id="conteudo">
+
 					<div class="col-md-3 "></div>
 					<div class="col-md-6 ">
 						<form id="form" data-toggle="validator" role="form" method="get"
@@ -71,36 +71,42 @@
 										placeholder="Digite sua idade aqui ...">
 								</div>
 							</div>
-							</br>
-							<div class="horoscopo">
-								</br> Gostaria de saber seu horoscopo chinês baseado em sua idade?
+					</div>
+					<div class="col-md-3 "></div>
+				</div>
+				</br>
 
-								<div class="row">
-									<div class="col-md-5 "></div>	
-									<div class="btn-group-toggle" data-toggle="buttons">
-										<label class="btn btn-warning btn-lg "> <input
-											type="checkbox" id="sim" id="verHoroscopo"
-											name="verHoroscopo" value="sim"> SIM
-										</label>
-									</div>
-									<!-- <div class="col-md-2 "></div> -->
-									<!-- <div class="btn-group-toggle" data-toggle="buttons">
-									<label class="btn btn-warning btn-lg"> <input
-										type="checkbox" id="sim" id="verHoroscopo" name="verHoroscopo"
-										value="nao"> NÃO
-									</label>
-								</div> -->
-									<div class="col-md-2 "></div>
-									</br> </br>
-								</div>
+				<div class="row content">
+					<div class="col-md-3 "></div>
+					<div class="col-md-6 ">
+						<div class="horoscopo">
+							</br> Gostaria de saber seu horoscopo chinês baseado em sua idade?
+
+							<div class="btn-group-toggle" data-toggle="buttons">
+								<label class="btn btn-warning btn-lg "> <input
+									type="checkbox" id="sim" id="verHoroscopo" name="verHoroscopo"
+									value="sim"> SIM
+								</label>
 							</div>
-							<button type="submit" class="btn btn-warning btn-lg btn-block">Enviar</button>
-						</form>
+							</br>
+
+						</div>
+					</div>
+
+					</br> </br>
+				</div>
+				<div class="row">
+					<div class="col-md-3 "></div>
+					<div class="col-md-6 ">
+						<button type="submit" class="btn btn-warning btn-lg btn-block">Enviar</button>
 					</div>
 					<div class="col-md-3 "></div>
 				</div>
 			</div>
+			</form>
 		</div>
+
 	</div>
+
 </body>
 </html>
