--- a/WebContent/astro.html
+++ b/WebContent/astro.html
@@ -80,8 +80,8 @@
 					<div class="col-md-3 "></div>
 					<div class="col-md-6 ">
 						<div class="horoscopo">
-							</br> Gostaria de saber seu horoscopo chinês baseado em sua idade?
-
+							</br></br> Gostaria de saber seu horoscopo chinês baseado em sua idade?
+							
 							<div class="btn-group-toggle" data-toggle="buttons">
 								<label class="btn btn-warning btn-lg "> <input
 									type="checkbox" id="sim" id="verHoroscopo" name="verHoroscopo"
