--- a/WebContent/astro.html
+++ b/WebContent/astro.html
@@ -26,9 +26,7 @@
 
 <!-- Inclusão do bootstrap via link local -->
 <link rel="stylesheet" href="css/bootstrap-4.1.3/css/bootstrap.min.css">
-<script src="css/bootstrap-4.1.3/js/bootstrap.min.js">
-	
-</script>
+<script src="css/bootstrap-4.1.3/js/bootstrap.min.js"></script>
 
 <!-- Inclusão do js de validação-->
 <script src="javascript/validacao.js" type="text/javascript"></script>
@@ -40,7 +38,6 @@
 <title>Astro Web</title>
 </head>
 <body>
-
 	<div class="container-fluid">
 		<div class="fundo">
 			<div class="corpo-Astro-home">
@@ -80,8 +77,9 @@
 					<div class="col-md-3 "></div>
 					<div class="col-md-6 ">
 						<div class="horoscopo">
-							</br></br> Gostaria de saber seu horoscopo chinês baseado em sua idade?
-							
+							</br>
+							</br> Gostaria de saber seu horoscopo chinês baseado em sua idade?
+
 							<div class="btn-group-toggle" data-toggle="buttons">
 								<label class="btn btn-warning btn-lg "> <input
 									type="checkbox" id="sim" id="verHoroscopo" name="verHoroscopo"
@@ -89,10 +87,8 @@
 								</label>
 							</div>
 							</br>
-
 						</div>
 					</div>
-
 					</br> </br>
 				</div>
 				<div class="row">
