--- a/WebContent/astro.html
+++ b/WebContent/astro.html
@@ -81,8 +81,8 @@
 							</br> Gostaria de saber seu horoscopo chinês baseado em sua idade?
 
 							<div class="btn-group-toggle" data-toggle="buttons">
-								<label class="btn btn-warning btn-lg "> <input
-									type="checkbox" id="sim" id="verHoroscopo" name="verHoroscopo"
+								<label class="btn btn-warning btn-lg	"> <input
+									type="checkbox" id="sim" name="verHoroscopo"
 									value="sim"> SIM
 								</label>
 							</div>
@@ -94,7 +94,7 @@
 				<div class="row">
 					<div class="col-md-3 "></div>
 					<div class="col-md-6 ">
-						<button type="submit" class="btn btn-warning btn-lg btn-block">Enviar</button>
+						<button id="enviar" type="submit" class="btn btn-warning btn-lg btn-block">Enviar</button>
 					</div>
 					<div class="col-md-3 "></div>
 				</div>
